2007-11-16  Robert Edmonds <edmonds@debian.org>,Corey Minyard <minyard@acm.org>
	
	* ser2net.c, ser2net.8: Add a '-P' option to specific that a
	pidfile be created.

2007-05-03  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Change the rfc2217 signature response code
	from 0 to 100.  Best guess on what this should be, as the
	RFC doesn't give the correct value and says "text".

2007-04-26  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Disable the Nagle algorithm (enable TCP_NODELAY) on
	the TCP ports to avoid long delays on short pieces of data.

	* configure.in: Move to version 2.4.

2007-03-19  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Use the proper value for modem data notifies sent
	to the client, it was 7, use 107 instead.

2006-12-01  Corey Minyard <minyard@acm.org>

	* readconfig.c: Handle an ending banner that does not have a '\n'
	in the last line.

2006-01-16  Corey Minyard <minyard@acm.org>

	* ser2net.8: Fix the documentation for control ports.

2006-01-09  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Don't kill the session if TIOCCBRK doesn't work.

2005-12-29  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, devcfg.h, ser2net.conf, ser2net.8: Added a
	'\s' banner token for printing out the serial parameters.

	* ser2net.conf: Cleaned up the ugly banner3.

	* Makefile.am: Add ser2net.init to EXTRA_DIST.

	* configure.in: Move to version 2.3.

2005-12-29  Aurelien Jarno <aurel32@debian.org>	
	
	* devcfg.c: Don't include "termio.h", but do include
	"sys/ioctl.h".

2005-10-20  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fixed a problem with rfc2217 stop bit size setting.
	It was interpreting the value of "3" as 2 stop bits, but 3 is for
	1.5 stop bits, and 2 is for 2 stop bits.

	* controller.c: Fixed some warnings dealing with char/unsigned
	char problems.
	* dataxfer.c: ditto
	* telnet.c: ditto

2005-08-25  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a problem wih EAGAIN just returning and not