@@ -233,6 +233,8 @@ ignores (- checks) the modem control lines (DCD, DTR, etc.)
 .I [-]HANGUP_WHEN_DONE
 lowers (- does not lower) the modem control lines (DCD, DTR, etc.) when
 the connection closes.
+.I NOBREAK
+Disables automatic clearing of the break setting of the port.
 .I remctl
 allows remote control of the serial port parameters via RFC 2217.  See
 the README for more info.
