@@ -37,6 +37,8 @@
 #            monitoring of the modem lines, and
 #            [-]HANGUP_WHEN_DONE turns on (- off) lowering the
 #            modem control lines when the connextion is done. 
+#	     NOBREAK disables automatic setting of the break
+#	     setting of the serial port.
 #            The "remctl" option allow remote control (ala RFC
 #            2217) of serial-port configuration.  A banner name
 #            may also be specified, that banner will be printed
